HLS Downloader: v2.0