@@ -1,36 +1,42 @@
 package com.al3xkras.hls_downloader;
 
 import com.google.common.collect.ImmutableMap;
-import com.google.gson.Gson;
-import com.google.gson.GsonBuilder;
-import com.google.gson.JsonElement;
-import com.google.gson.JsonParser;
 import io.github.bonigarcia.wdm.WebDriverManager;
+import lombok.extern.slf4j.Slf4j;
 import net.lightbody.bmp.BrowserMobProxy;
 import net.lightbody.bmp.BrowserMobProxyServer;
 import net.lightbody.bmp.client.ClientUtil;
 import net.lightbody.bmp.core.har.Har;
 import net.lightbody.bmp.proxy.CaptureType;
+import org.openqa.selenium.By;
 import org.openqa.selenium.Proxy;
+import org.openqa.selenium.WebElement;
 import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.devtools.Command;
 import org.openqa.selenium.devtools.DevTools;
+import org.openqa.selenium.interactions.Actions;
+import org.openqa.selenium.support.ui.WebDriverWait;
 
 import java.io.*;
 import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 
+@Slf4j
 public class Main {
     private static final int URL_MAX_SIZE=200;
     private static final String URL_SEARCH="m3u8";
+    private static final String CMD_YTDL="youtube-dl --all-subs -f mp4 -o \"%s\" \"%s\"";
     private static final String HTTP="http";
 
     public static void main(String[] args) throws InterruptedException, IOException {
 
-        //assert args.length>0;
-        String webpageUrl = "http://localhost:10001";
+        assert args.length>=2;
+        String webpageUrl = args[0];
+        String filename=args[1];
 
         BrowserMobProxy proxy = new BrowserMobProxyServer();
+
         proxy.start(19091);
         proxy.setHarCaptureTypes(CaptureType.RESPONSE_CONTENT);
         Proxy seleniumProxy = ClientUtil.createSeleniumProxy(proxy);
@@ -43,7 +49,7 @@ public class Main {
 
         proxy.enableHarCaptureTypes(CaptureType.REQUEST_CONTENT, CaptureType.RESPONSE_CONTENT);
 
-        proxy.newHar("localhost");
+        proxy.newHar("har0");
 
         DevTools devTools = chromeDriver.getDevTools();
         devTools.createSession();
@@ -51,41 +57,51 @@ public class Main {
 
         chromeDriver.get(webpageUrl);
 
-        Thread.sleep(20000);
+        new WebDriverWait(chromeDriver, Duration.ofMillis(10000))
+                .until(d->d.findElements(By.tagName("iframe")));
+
+        WebElement el= chromeDriver.findElements(By.tagName("iframe")).get(0);
+
+        Actions builder = new Actions(chromeDriver);
+        builder.moveToElement(el, 10, 25)
+                .click().build().perform();
+
+        Thread.sleep(10000);
+
         Har har = proxy.getHar();
         proxy.stop();
+        Thread.sleep(1000);
 
         ByteArrayOutputStream o = new ByteArrayOutputStream();
         har.writeTo(new PrintWriter(o));
         String s = o.toString(StandardCharsets.UTF_8);
 
-        System.out.println("\n\n\n\n\n\n\n\n\n\n");
         int index;
 
-        String videoUrl = null;
+        String videoUrl[] = new String[]{null};
 
-        while ((index=s.indexOf("m3u8"))>0){
+        while ((index=s.indexOf(URL_SEARCH))>0){
             String url = s.substring(index-URL_MAX_SIZE,index+URL_SEARCH.length());
             s=s.substring(index+URL_SEARCH.length());
 
-            int urlStart=s.indexOf(HTTP);
+            int urlStart=url.indexOf(HTTP);
             String pre = url.substring(0,urlStart).toLowerCase();
             String actualUrl=url.substring(urlStart);
-            videoUrl=actualUrl;
+            videoUrl[0]=actualUrl;
             System.out.println(actualUrl);
         }
 
-        String filename="video1.mp4";
-        String cmd = String.format("youtube-dl --all-subs -f mp4 -o \"%s\" \"%s\"",filename,videoUrl);
 
-        Process youtubeDl = Runtime.getRuntime().exec(cmd);
+        ProcessBuilder pb = new ProcessBuilder("youtube-dl",
+                "--all-subs" , "-f" , "mp4", "-o" , "\""+filename+"\"" ,
+                "\""+videoUrl[0]+"\"");
 
-        BufferedReader in = new BufferedReader(
-                new InputStreamReader(youtubeDl.getInputStream()) );
-        String line;
-        while ((line = in.readLine()) != null) {
-            System.out.println(line);
-        }
-        in.close();
+        pb.directory(new File(System.getProperty("user.dir")));
+        pb.redirectOutput(ProcessBuilder.Redirect.INHERIT);
+        pb.redirectError(ProcessBuilder.Redirect.INHERIT);
+
+        Process youtubeDl = pb.start();
+
+        assert youtubeDl.waitFor()==0;
     }
 }
